tests/errors/scalar_body_new_signature.dang
# A scalar's new() hook takes exactly one String! parameter.
scalar Port {
  new(raw: Int!) {
    "80"
  }
}
